@@ -13,6 +13,8 @@ documents those changes that are of interest to users and admins.
     the last_job_update variable.
  -- Fixed sview for gtk < 2.10 to display correct debug level at first.
  -- Fixed sview to not select too fast when using a mouse right click.
+ -- Fixed sacct to display correct timelimits for jobs from accounting.
+ -- Fixed sacct when running as root by default query all users as documented.
 
 * Changes in SLURM 2.1.8
 ========================
